--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,5 @@ Engine will load scripted entities to scenes, then run the scenes.
 
 
 script system needs to run on scripts and instantiates them? Maybe a seperate manager that works with scenes?
+
+FİX ECS TO LOAD DLLS
